@@ -1,5 +1,7 @@
 == master
 
+* Allow after_transitions to be explicitly run on failed attempts
+* By default, don't run after_transition callbacks on failed attempts
 * Fix not allowing multiple methods to be specificed as arguments in callbacks
 * Fix initial states being set when loading records from the database in Sequel integration
 * Allow static initial states to be set earlier in the initialization of an object
